adjust icon spacing

--- a/auxi/css/template.css
+++ b/auxi/css/template.css
@@ -620,7 +620,7 @@ div#bottom {
 	display: block;
 	float: left;
 	margin: 0;
-	padding: 0;
+	padding: 5px 0 0 15px;
 }
 
 #horiz-menu a {
@@ -641,7 +641,7 @@ div#bottom {
 	font-family: Share, Share-Regular, Century Gothic, Helvetica, sans-serif;
 	display: block;
 	float: left;
-/*	padding: 5px 0 0 15px;   */
+	padding: 5px 0 0 15px;
 	vertical-align: middle;
 	font-weight: normal;
 	font-size: 90%;
