change sidebar heds to darker orange

--- a/auxi/css/style5.css
+++ b/auxi/css/style5.css
@@ -47,7 +47,7 @@ div.moduletable-hilite1 a.readon, div.module-hilite1 a.readon, ul.arrow-1 li, ul
 }
 /* RogerS mod */
 #secondcol .moduletable h3 {
-	color: #f27435;
+	color: #da5826;
 }
 p a, span.categories-label { color: #da5826 !important; }
 
